updating female to male un character composition

--- a/mas.ipynb
+++ b/mas.ipynb
@@ -180,6 +180,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8e7e981a",
+   "metadata": {},
+   "source": [
+    "![alt text](image.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ef27137c",
+   "metadata": {},
+   "source": [
+    "Swarm se centra en que la coordinación y ejecución de agentes sea ligera, altamente controlable y fácil de probar.\n",
+    "\n",
+    "Esto se logra mediante dos abstracciones primitivas: Agentes y transferencias. Un Agente comprende instrucciones y herramientas, y puede, en cualquier momento, transferir una conversación a otro Agente.\n",
+    "\n",
+    "Estas primitivas son lo suficientemente potentes como para expresar una dinámica rica entre herramientas y redes de agentes, lo que permite crear soluciones escalables y prácticas, evitando una curva de aprendizaje pronunciada."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "id": "0b18502b",
@@ -244,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "0ba8ea5b",
    "metadata": {},
    "outputs": [
@@ -252,7 +272,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'flight_assistant': {'messages': [HumanMessage(content='reserva un vuelo de BOS to JFK y un hospedaje en McKittrick Hotel', additional_kwargs={}, response_metadata={}, id='14dd83b4-882b-4958-91a4-909cf1a5ac6c'), AIMessage(content='', additional_kwargs={}, response_metadata={'model': 'llama3.2:latest', 'created_at': '2026-02-13T00:41:03.4054596Z', 'done': True, 'done_reason': 'stop', 'total_duration': 879766100, 'load_duration': 164378200, 'prompt_eval_count': 230, 'prompt_eval_duration': 395095100, 'eval_count': 29, 'eval_duration': 291791000, 'logprobs': None, 'model_name': 'llama3.2:latest', 'model_provider': 'ollama'}, name='flight_assistant', id='lc_run--019c5471-af3b-7fe0-9169-488e3d72ab04-0', tool_calls=[{'name': 'book_flight', 'args': {'from_airport': 'BOS', 'to_airport': 'JFK'}, 'id': '750042ad-2c57-45c0-9fbd-a00248dd6d49', 'type': 'tool_call'}], invalid_tool_calls=[], usage_metadata={'input_tokens': 230, 'output_tokens': 29, 'total_tokens': 259}), ToolMessage(content='Successfully booked a flight from BOS to JFK.', name='book_flight', id='e7e34be8-acb2-4a94-bcef-cbcc55ce33c3', tool_call_id='750042ad-2c57-45c0-9fbd-a00248dd6d49'), AIMessage(content='{\"name\": \"book_hotel\", \"parameters\": {\"hotel_name\": \"McKittrick Hotel\", \"check_in_date\": \"2024-03-12\", \"check_out_date\": \"2024-03-14\"}}', additional_kwargs={}, response_metadata={'model': 'llama3.2:latest', 'created_at': '2026-02-13T00:41:04.1416117Z', 'done': True, 'done_reason': 'stop', 'total_duration': 728402200, 'load_duration': 149080400, 'prompt_eval_count': 137, 'prompt_eval_duration': 25500800, 'eval_count': 49, 'eval_duration': 518345800, 'logprobs': None, 'model_name': 'llama3.2:latest', 'model_provider': 'ollama'}, name='flight_assistant', id='lc_run--019c5471-b2b3-7e81-b8e0-973498d6d1c4-0', tool_calls=[], invalid_tool_calls=[], usage_metadata={'input_tokens': 137, 'output_tokens': 49, 'total_tokens': 186})]}}\n",
+      "{'flight_assistant': {'messages': [HumanMessage(content='reserva un vuelo de BOS to JFK y un hospedaje en McKittrick Hotel', additional_kwargs={}, response_metadata={}, id='7a579dc5-a697-483b-8d5e-473da27c22d0'), AIMessage(content='', additional_kwargs={}, response_metadata={'model': 'qwen3', 'created_at': '2026-02-13T00:54:54.5851344Z', 'done': True, 'done_reason': 'stop', 'total_duration': 17893057900, 'load_duration': 5423587800, 'prompt_eval_count': 223, 'prompt_eval_duration': 201388700, 'eval_count': 312, 'eval_duration': 12041925100, 'logprobs': None, 'model_name': 'qwen3', 'model_provider': 'ollama'}, name='flight_assistant', id='lc_run--019c547e-1b91-7000-907e-4215be90fe8a-0', tool_calls=[{'name': 'book_flight', 'args': {'from_airport': 'BOS', 'to_airport': 'JFK'}, 'id': '0f1a33e1-6f2c-4337-8553-2aabc511e2d4', 'type': 'tool_call'}, {'name': 'transfer_to_hotel_assistant', 'args': {}, 'id': '182d9a5a-d6c7-44d0-96da-aba574075967', 'type': 'tool_call'}], invalid_tool_calls=[], usage_metadata={'input_tokens': 223, 'output_tokens': 312, 'total_tokens': 535}), ToolMessage(content='Successfully transferred to hotel_assistant', name='transfer_to_hotel_assistant', id='975fad85-3973-4f32-8436-f2157c8e485a', tool_call_id='182d9a5a-d6c7-44d0-96da-aba574075967')], 'active_agent': 'hotel_assistant'}}\n",
+      "\n",
+      "\n",
+      "{'hotel_assistant': {'messages': [HumanMessage(content='reserva un vuelo de BOS to JFK y un hospedaje en McKittrick Hotel', additional_kwargs={}, response_metadata={}, id='7a579dc5-a697-483b-8d5e-473da27c22d0'), AIMessage(content='', additional_kwargs={}, response_metadata={'model': 'qwen3', 'created_at': '2026-02-13T00:54:54.5851344Z', 'done': True, 'done_reason': 'stop', 'total_duration': 17893057900, 'load_duration': 5423587800, 'prompt_eval_count': 223, 'prompt_eval_duration': 201388700, 'eval_count': 312, 'eval_duration': 12041925100, 'logprobs': None, 'model_name': 'qwen3', 'model_provider': 'ollama'}, name='flight_assistant', id='lc_run--019c547e-1b91-7000-907e-4215be90fe8a-0', tool_calls=[{'name': 'book_flight', 'args': {'from_airport': 'BOS', 'to_airport': 'JFK'}, 'id': '0f1a33e1-6f2c-4337-8553-2aabc511e2d4', 'type': 'tool_call'}, {'name': 'transfer_to_hotel_assistant', 'args': {}, 'id': '182d9a5a-d6c7-44d0-96da-aba574075967', 'type': 'tool_call'}], invalid_tool_calls=[], usage_metadata={'input_tokens': 223, 'output_tokens': 312, 'total_tokens': 535}), ToolMessage(content='Successfully transferred to hotel_assistant', name='transfer_to_hotel_assistant', id='975fad85-3973-4f32-8436-f2157c8e485a', tool_call_id='182d9a5a-d6c7-44d0-96da-aba574075967'), AIMessage(content='Su vuelo de BOS a JFK ha sido reservado con éxito. Además, se ha iniciado el proceso de reservación para el McKittrick Hotel. Por favor, espere un momento mientras confirmamos ambos servicios.', additional_kwargs={}, response_metadata={'model': 'qwen3', 'created_at': '2026-02-13T00:55:21.9586941Z', 'done': True, 'done_reason': 'stop', 'total_duration': 27356936400, 'load_duration': 156103700, 'prompt_eval_count': 274, 'prompt_eval_duration': 253197800, 'eval_count': 611, 'eval_duration': 26769623000, 'logprobs': None, 'model_name': 'qwen3', 'model_provider': 'ollama'}, name='hotel_assistant', id='lc_run--019c547e-6186-7370-87ec-e3ad0d3ef02b-0', tool_calls=[], invalid_tool_calls=[], usage_metadata={'input_tokens': 274, 'output_tokens': 611, 'total_tokens': 885})]}}\n",
       "\n",
       "\n"
      ]
@@ -273,13 +296,13 @@
     ")\n",
     "\n",
     "flight_assistant = create_agent(\n",
-    "    model=ChatOllama(model=\"llama3.2:latest\", temperature=0.2),\n",
+    "    model=ChatOllama(model=\"qwen3\", temperature=0.2),\n",
     "    tools=[book_flight, transfer_to_hotel_assistant],\n",
     "    system_prompt=\"Eres un asistente que agenda vuelos de avion\",\n",
     "    name=\"flight_assistant\"\n",
     ")\n",
     "hotel_assistant = create_agent(\n",
-    "    model=ChatOllama(model=\"llama3.2:latest\", temperature=0.2),\n",
+    "    model=ChatOllama(model=\"qwen3\", temperature=0.2),\n",
     "    tools=[book_hotel, transfer_to_flight_assistant],\n",
     "    system_prompt=\"Eres un asistente de reservas de hotel\",\n",
     "    name=\"hotel_assistant\"\n",
